libs/extractor/src/snapshots/extractor__tests__support_transpile_cjs-3.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.js\",\nr#\"\"use strict\";Object.defineProperty(exports,Symbol.toStringTag,{value:\"Module\"});const e=require(\"react/jsx-runtime\"),r=require(\"@devup-ui/react\");function t(){return e.jsxs(\"div\",{children:[e.jsx(r.Box,{_hover:{bg:\"blue\"},bg:\"$text\",color:\"red\",children:\"hello\"}),e.jsx(r.Text,{typography:\"header\",children:\"typo\"}),e.jsx(r.Flex,{as:\"section\",mt:2,children:\"section\"})]})}exports.Lib=t;\"#,\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "$text",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "blue",
                level: 0,
                selector: Some(
                    Selector(
                        "&:hover",
                    ),
                ),
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "margin-top",
                value: "8px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Typography(
            "header",
        ),
    },
    code: "\"use strict\";\nimport \"@devup-ui/react/devup-ui.css\";\nObject.defineProperty(exports, Symbol.toStringTag, { value: \"Module\" });\nconst e = require(\"react/jsx-runtime\"), r = require(\"@devup-ui/react\");\nfunction t() {\n\treturn e.jsxs(\"div\", { children: [\n\t\t((__devupSpread0) => e.jsx(\"div\", {\n\t\t\tchildren: __devupSpread0,\n\t\t\tclassName: \"OHdbk4xhyc6_lbsv2t OHcpaugheu4ltw2pel OLcolor-vred\"\n\t\t}))(\"hello\"),\n\t\t((__devupSpread2, __devupSpread1) => e.jsx(\"span\", {\n\t\t\tchildren: __devupSpread1,\n\t\t\tclassName: __devupSpread2\n\t\t}))(\"typo-header\", \"typo\"),\n\t\t((__devupSpread3) => e.jsx(\"section\", {\n\t\t\tchildren: __devupSpread3,\n\t\t\tclassName: \"OLdisplay-vflex-o0 OLmargin_dtop-v8px\"\n\t\t}))(\"section\")\n\t] });\n}\nexports.Lib = t;\n",
}
