libs/extractor/src/snapshots/extractor__tests__support_transpile_mjs-4.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.js\",\nr#\"import { jsx as e } from \"react/jsx-runtime\";\nimport { Box as o } from \"@devup-ui/core\";\ne(o, { className: \"a\", bg: variable, style: { color: \"blue\" } })\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "background",
                level: 0,
                identifier: "__devupSpread1",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\nimport { jsx as e } from \"react/jsx-runtime\";\n((__devupSpread1, __devupSpread0) => e(\"div\", {\n\tclassName: \"a OHa6qxi4uo5yz7gqyi\",\n\tstyle: {\n\t\t...{ \"---SUimport_s_x7b__sjsx_sas_se_s_x7d__sfrom_s_qreact_ljsx_druntime_q_x3b__xa_import_s_x7b__s_x42_ox_sas_so_s_x7d__sfrom_s_q_x40_devup_dui_lcore_q_x3b__xa_e_oo_m_s_x7b__sclass_x4e_ame_n_s_qa_q_m_sbg_n_svariable_m_sstyle_n_s_x7b__scolor_n_s_qblue_q_s_x7d__s_x7d__e_xa_-cp\": __devupSpread1 },\n\t\t...__devupSpread0\n\t}\n}))(variable, { color: \"blue\" });\n",
}
