libs/extractor/src/snapshots/extractor__tests__support_transpile_mjs-5.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.js\",\nr#\"import { jsx as e } from \"react/jsx-runtime\";\nimport { Box as o } from \"@devup-ui/core\";\ne(o, { className: \"a\", bg: variable, style: { color: \"blue\" }, ...props })\n\"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "background",
                level: 0,
                identifier: "\"bg\" in __devupSpread0 ? __devupSpread0.bg : (__devupValue0)",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\nimport { jsx as e } from \"react/jsx-runtime\";\ne(\"div\", ((__devupValue0, __devupSpread0) => ({\n\t...__devupSpread0,\n\tclassName: `${(\"className\" in __devupSpread0 ? __devupSpread0.className : \"a\") || \"\"} a`,\n\tstyle: {\n\t\t...{ \"--b\": \"bg\" in __devupSpread0 ? __devupSpread0.bg : (__devupValue0) },\n\t\t...\"style\" in __devupSpread0 ? __devupSpread0.style : { color: \"blue\" }\n\t}\n}))(variable, {\n\t__proto__: null,\n\t...props\n}));\n",
}
