libs/extractor/src/snapshots/extractor__tests__support_transpile_mjs-7.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.js\",\nr#\"import { jsx as e } from \"react/jsx-runtime\";\n        import { Box as o } from \"@devup-ui/core\";\n        e(o, { as: Variable, className: \"a\", bg: variable, style: { color: \"blue\" }, props: { animate: { duration: 1 } } })\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Dynamic(
            ExtractDynamicStyle {
                property: "background",
                level: 0,
                identifier: "__devupSpread2",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\nimport { jsx as e } from \"react/jsx-runtime\";\n((__devupSpread1, __devupSpread2, __devupSpread0) => e(__devupSpread1, {\n\tclassName: \"a OHb230lwd7rr13g3kh\",\n\tstyle: {\n\t\t...{ \"---SUHapdp7wqs7h4tw95_-di\": __devupSpread2 },\n\t\t...__devupSpread0\n\t},\n\t...{ animate: { duration: 1 } }\n}))(Variable || \"div\", variable, { color: \"blue\" });\n",
}
